--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -7,4 +7,19 @@
     <string name="menu_patient">Paciente</string>
     <string name="menu_record">Historial</string>
     <string name="menu_setting">Configuración</string>
+
+    <!--Mensajes-->
+    <string name="mensaje_titulo_crear_paciente">Crear paciente</string>
+
+    <string name="nombre">Name</string>
+    <string name="primer_apellido">Primer apellido</string>
+    <string name="segundo_apellido">Segundo apellido</string>
+    <string name="sexo">Sexo</string>
+    <string name="sexo_femenino">Femenino</string>
+    <string name="sexo_masculino">Masculino</string>
+    <string name="telefono">Teléfono</string>
+
+    <!-- Botones -->
+    <string name="aceptar">Aceptar</string>
+    <string name="cancelar">Cancelar</string>
 </resources>
