--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,16 @@
     <string name="tabla_cantidad">Quantity #</string>
     <string name="tabla_porcentaje">% #</string>
     <string name="tabla_medida">/µL</string>
+    <string name="valor_cero" translatable="false">0</string>
+    <string-array name="celulas">
+        <item name="baso">BASO</item>
+        <item name="eos">EOS</item>
+        <item name="mono">MONO</item>
+        <item name="st">ST</item>
+        <item name="seg">SEG</item>
+        <item name="lym">LYM</item>
+        <item name="nrbc">NRBC</item>
+        <item name="otro_uno">Other 1</item>
+        <item name="otro_dos">Other 2</item>
+    </string-array>
 </resources>
