--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -14,6 +14,8 @@
     <string name="mensaje_campo_obligatorio">Campos obligatorios ...!</string>
     <string name="mensaje_error">Error al guardar ...!</string>
     <string name="mensaje_seleccione_paciente">--Seleccione paciente--</string>
+    <string name="mensaje_campo_obligatorio_calculo">Campo obligatorio para el cálculo ...!</string>
+    <string name="mensaje_alerta_titulo">Exportar</string>
 
     <string name="campo_obligatorio">*</string>
 
@@ -42,7 +44,7 @@
 
     <!-- Tabla -->
     <string name="tabla_tipo">Tipo WBC</string>
-    <string name="tabla_cantidad">Cantidad #</string>
+    <string name="tabla_cantidad">Cantidad </string>
     <string name="tabla_porcentaje">% 100</string>
     <string name="tabla_medida">/µL</string>
 
