Diseño historial v1, Calculo muestra AlertDialog para exportar

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -37,6 +37,7 @@
     <string name="exportar">Exportar</string>
     <string name="eliminar_ultimo">Deshacer</string>
     <string name="reiniciar">Reiniciar</string>
+    <string name="buscar">Buscar</string>
 
     <!-- Etiquetas -->
     <string name="cantidad_total">Cantidad total: </string>
