--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -48,6 +48,8 @@
     <string name="tabla_cantidad">Quantité #</string>
     <string name="tabla_porcentaje">% 100</string>
     <string name="tabla_medida">/µL</string>
+    <string name="tabla_fecha">Date</string>
+    <string name="tabla_nombre">Name</string>
 
 
     <string name="baso">BASO</string>
