Vista historial muesta el PopupMenu al pulsar sobre el boton

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -38,6 +38,7 @@
     <string name="eliminar_ultimo">Deshacer</string>
     <string name="reiniciar">Reiniciar</string>
     <string name="buscar">Buscar</string>
+    <string name="eliminar">Eliminar</string>
 
     <!-- Etiquetas -->
     <string name="cantidad_total">Cantidad total: </string>
