Cambios en estilos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">WBCs Counter</string>
 
+    <string name="empty" translatable="false"> </string>
+
     <!-- Menu nav options-->
     <string name="menu_counter">WBC Differential Counter</string>
     <string name="menu_patient">Patient</string>
