--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="mensaje_seleccione_paciente">--Select patient--</string>
     <string name="mensaje_campo_obligatorio_calculo">Required field for calculation ...!</string>
     <string name="mensaje_alerta_titulo">Export</string>
-
+    <string name="mensaje_sin_historial">No history</string>
 
     <string name="campo_obligatorio">*</string>
 
