--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,12 +12,16 @@
     <!--Mensajes-->
     <string name="mensaje_titulo_crear_paciente">Create patient</string>
     <string name="mensaje_exito_guardado">Saved successfully ...!</string>
-    <string name="mensaje_campo_obligatorio">Required fields ..!</string>
+    <string name="mensaje_campo_obligatorio">Required fields ...!</string>
     <string name="mensaje_error">Error saving ...!</string>
     <string name="mensaje_seleccione_paciente">--Select patient--</string>
     <string name="mensaje_campo_obligatorio_calculo">Required field for calculation ...!</string>
     <string name="mensaje_alerta_titulo">Export</string>
-    <string name="mensaje_sin_historial">No history</string>
+    <string name="mensaje_sin_historial">No history ...!</string>
+    <string name="mensaje_fechas">Check the range of search dates ...!</string>
+    <string name="mensaje_eliminar_registro">Are you sure to delete the record?</string>
+    <string name="mensaje_registro_eliminado_exitoso">Registry successfully deleted</string>
+    <string name="mensaje_registro_eliminado_error">Error deleting the record</string>
 
     <string name="campo_obligatorio">*</string>
 
