--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -12,7 +12,7 @@
     <string name="mensaje_titulo_crear_paciente">Nouveau patient</string>
     <string name="mensaje_exito_guardado">Enregistré avec succès!</string>
     <string name="mensaje_campo_obligatorio">Champs obligatoires!</string>
-    <string name="mensaje_error">Erreur à l\'enregistrement!</string>
+    <string name="mensaje_error_guardar">Erreur à l\'enregistrement!</string>
     <string name="mensaje_seleccione_paciente">--Choisir patient--</string>
     <string name="mensaje_campo_obligatorio_calculo">Required field for calculation ...!</string>
     <string name="mensaje_alerta_titulo">Export</string>
@@ -21,6 +21,7 @@
     <string name="mensaje_eliminar_registro">Are you sure to delete the record?</string>
     <string name="mensaje_registro_eliminado_exitoso">Registry successfully deleted</string>
     <string name="mensaje_registro_eliminado_error">Error deleting the record</string>
+    <string name="mensaje_error_exportar">Failed to export ...!</string>
 
     <string name="campo_obligatorio">*</string>
 
@@ -73,4 +74,16 @@
     <string name="tabla_header_sin_nrbc">Sans nRBC</string>
     <string name="tabla_total_wbc">Totale de WBC</string>
     <string name="include_nrbc">Inclure nRBC</string>
+
+    <!--Reporte-->
+    <string name="etiqueta_nombre">Name:</string>
+    <string name="etiqueta_fecha">Date:</string>
+    <string name="etiqueta_telefono">Phone:</string>
+    <string name="etiqueta_cantidad_total_wbc">Total amount of WBC:</string>
+    <string name="etiqueta_total_wbc">Total WBC:</string>
+    <string name="etiqueta_total_con_nrbc">With nRBC</string>
+    <string name="etiqueta_total_sin_nrbc">Without nRBC</string>
+    <string name="etiqueta_fecha_generacion">Current date:</string>
+
+    <string name="mensaje_indefinido">Undefined</string>
 </resources>
