Cambios en colores y logotipo

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -74,4 +74,7 @@
     <string name="tabla_total_wbc">Total WBC</string>
     <string name="include_nrbc">Incluir nRBC</string>
 
+    <!--Settings-->
+    <string name="seleccione_cantidad_alertar">--Seleccione cantidad de alerta--</string>
+
 </resources>
