--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -89,10 +89,13 @@
     <string name="etiqueta_total_con_nrbc">With nRBC</string>
     <string name="etiqueta_total_sin_nrbc">Without nRBC</string>
     <string name="etiqueta_fecha_generacion">Current date:</string>
+    <string name="titulo_reporte">Sample report WBC</string>
 
     <string name="mensaje_indefinido">Undefined</string>
     <string name="configuracion_botones">Configuration des boutons</string>
     <string name="vibrar">Vibrer</string>
     <string name="sonido">Son</string>
     <string name="filtros">Filtres</string>
+
+    <string name="message_permission_denied">Some Permission is Denied</string>
 </resources>
