--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,11 +90,14 @@
     <string name="etiqueta_total_con_nrbc">With nRBC</string>
     <string name="etiqueta_total_sin_nrbc">Without nRBC</string>
     <string name="etiqueta_fecha_generacion">Current date:</string>
+    <string name="titulo_reporte">Sample report WBC</string>
 
     <string name="mensaje_indefinido">Undefined</string>
     <string name="configuracion_botones">Button configuration</string>
     <string name="vibrar">Vibrate</string>
     <string name="sonido">Sound</string>
     <string name="filtros">Filters</string>
+
+    <string name="message_permission_denied">Some Permission is Denied</string>
 
 </resources>
