Sonido, vibracion, cambios en estilo de fechas

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -109,4 +109,5 @@
     <string name="filtros">Filtres</string>
 
     <string name="message_permission_denied">Some Permission is Denied</string>
+    <string name="from">From:</string>
 </resources>
