--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -108,4 +108,5 @@
     <string name="filtros">Filtros</string>
 
     <string name="message_permission_denied">Algunos permisos son denegados</string>
+    <string name="from">From:</string>
 </resources>
