--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,5 +117,7 @@
     <string name="activar_vibracion_preference">ActivarVibracionPreference</string>
     <string name="from">From:</string>
     <string name="to">To:</string>
-
+    <string name="calcular_resultado">Calculate result</string>
+    <string name="continuar_contando">Continue counting</string>
+    <string name="cantidad_total_mayor_cero">The total amount must be greater than 0</string>
 </resources>
