--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Compteur de globules - WBCs</string>
+    <string name="app_name">HemacountApp</string>
 
     <!-- Menu nav options-->
     <string name="menu_counter">Compteur différentiel de globules - WBC</string>
@@ -100,7 +100,7 @@
     <string name="etiqueta_total_con_nrbc">With nRBC</string>
     <string name="etiqueta_total_sin_nrbc">Without nRBC</string>
     <string name="etiqueta_fecha_generacion">Current date:</string>
-    <string name="titulo_reporte">Sample report WBC</string>
+    <string name="titulo_reporte">Hemogram report</string>
 
     <string name="mensaje_indefinido">Undefined</string>
     <string name="configuracion_botones">Configuration des boutons</string>
